# finance-ai-agent

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: README.md
scripts/: build_index.py
src/finance_agent/: __init__.py  __main__.py  cli.py  config.py  graph.py  llm.py  logging_setup.py  prompts.py  schemas.py  state.py
src/finance_agent/agents/: __init__.py  filings_agent.py  market_data_agent.py  news_agent.py  report_agent.py
src/finance_agent/tools/: __init__.py  filings.py  market_data.py  news.py
tests/: conftest.py  test_filings_retriever.py  test_graph.py  test_market_data_tools.py  test_news_tools.py  test_state.py
