[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "finance-agent"
version = "0.2.0"
description = "Multi-agent equity research workflow built on LangGraph and Google Gemini."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Mehdi" }]
keywords = ["langchain", "langgraph", "gemini", "finance", "agents", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "langchain>=1.3,<2.0",
    "langchain-core>=1.0,<2.0",
    "langchain-community>=0.4,<1.0",
    "langchain-google-genai>=4.0,<5.0",
    "langchain-text-splitters>=1.0,<2.0",
    "langgraph>=1.2,<2.0",
    "langgraph-checkpoint>=4.0,<5.0",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "python-dotenv>=1.0,<2.0",
    "yfinance>=0.2.55,<0.3",
    "ta>=0.11,<0.12",
    "pandas>=2.2,<3.0",
    "numpy>=1.26,<3.0",
    "markitdown[all]>=0.0.2,<0.2",
    "requests>=2.32,<3.0",
    "faiss-cpu>=1.9,<2.0",
    "typer>=0.15,<1.0",
    "rich>=13.9,<15.0",
    "tenacity>=9.0,<10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-mock>=3.14,<4.0",
    "pytest-asyncio>=0.24,<1.0",
    "ruff>=0.8,<1.0",
    "mypy>=1.13,<2.0",
    "types-requests",
]

[project.scripts]
finance-agent = "finance_agent.cli:app"

[project.urls]
Homepage = "https://github.com/iam-armoin/finance-agent"
Issues = "https://github.com/iam-armoin/finance-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/finance_agent"]

[tool.hatch.build.targets.sdist]
include = [
    "src/finance_agent",
    "data",
    "README.md",
    ".env.example",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "RUF", # ruff-specific
    "SIM", # simplify
    "C4",  # comprehensions
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803", "N806"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "ta.*",
    "yfinance.*",
    "markitdown.*",
    "faiss.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: integration tests requiring real network/API access",
]
